--- a/app/scripts/components/ui/main.css
+++ b/app/scripts/components/ui/main.css
@@ -100,11 +100,6 @@ width: 100% !important;
 height: auto;
 }
 
-.chosen-container-multi .chosen-choices {
-  max-height: 300px;
-  overflow-y: scroll;
-}
-
 .chosen-container-multi .chosen-choices li.search-choice .search-choice-close {
   background: url(/bower_components/chosen/chosen-sprite.png) -42px 1px no-repeat;
 }
